--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
 
       <div class="search-results">
         <ul class="results">
+          <a href="#5ed6604591c37cdc054bce0d">Recipe 1</a>
+          <a href="#5ed6604691c37cdc054bd0bc">Recipe 2</a>
           <!-- 
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
