--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                     </p>
                   </div>
 
-                  <!-- <li class="preview">
+                  <!-- 
+                    *<li class="preview">
                     <a class="preview__link" href="#23456">
                       <figure class="preview__fig">
                         <img src="src/img/test-1.jpg" alt="Test" />
@@ -76,12 +77,13 @@
                         <p class="preview__publisher">The Pioneer Woman</p>
                       </div>
                     </a>
+                  </li>
                     <div class="recipe__user-generated">
-          <svg>
+                   
+                <svg>
             <use href="${icons}#icon-user"></use>
           </svg>
-        </div>
-                  </li> -->
+        </div>-->
                 </ul>
               </div>
             </li>
